examples/negative/pub_enforcement/violation_constructor/main.kai
import lib

fn pick() : Color = Red

fn main() : Unit / Console {
  print(int_to_string(placeholder()))
}
